--- a/.github/workflows/pint.yml
+++ b/.github/workflows/pint.yml
@@ -12,6 +12,9 @@ jobs:
   pint-and-commit:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
