--- a/.github/workflows/pint.yml
+++ b/.github/workflows/pint.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Auto Commit
         uses: stefanzweifel/git-auto-commit-action@v5.0.1
         with:
-          commit_message: 🎨 auto pint
+          commit_message: 🎨 Auto Pint
