--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -15,4 +15,4 @@ jobs:
         uses: actions/labeler@v5
         with:
           configuration-path: .github/configs/labeler.yml
-#          sync-labels: true
+          sync-labels: true
