--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -16,3 +16,11 @@ jobs:
         with:
           configuration-path: .github/configs/labeler.yml
           sync-labels: true
+
+      - name: Add or Delete Draft Label
+        run: gh pr edit "$NUMBER" --add-label "$LABELS"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_REPO: ${{ github.repository }}
+          NUMBER: ${{ github.event.number }}
+          LABELS: draft
