--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -18,7 +18,7 @@ jobs:
           sync-labels: true
 
       - name: Add or Delete Draft Label
-        run: gh pr edit "$NUMBER" --add-label "$LABELS"
+        run: gh pr edit $NUMBER --add-label $LABELS
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
