--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -18,9 +18,10 @@ jobs:
           sync-labels: true
 
       - name: Add or Delete Draft Label
-        run: gh pr edit $NUMBER --add-label $LABELS
+        run: gh pr edit $NUMBER $OPTION $LABELS
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
           NUMBER: ${{ github.event.number }}
+          OPTION: ${{ github.event.pull_request.draft == true && '--add-label' || '--remove-label' }}
           LABELS: draft
