--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -1,6 +1,8 @@
 name: Auto Label
 
-on: pull_request
+on:
+  pull_request:
+    types: [opened, synchronize, ready_for_review, converted_to_draft]
 
 jobs:
   auto-label:
