--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -20,7 +20,9 @@ jobs:
           sync-labels: true
 
       - name: Add or Delete Draft Label
-        run: gh pr edit $NUMBER $OPTION $LABELS
+        run: |
+         gh label create $LABELS EDEDED
+         gh pr edit $NUMBER $OPTION $LABELS
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
