:recycle: ラベルを作成する処理を独立させた

--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -12,6 +12,12 @@ jobs:
       contents: read
       pull-requests: write
 
+    env:
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GH_REPO: ${{ github.repository }}
+      LABEL_NAME: draft
+      LABEL_COLOR: EDEDED
+
     steps:
       - name: Run Labeler
         uses: actions/labeler@v5
@@ -19,13 +25,11 @@ jobs:
           configuration-path: .github/configs/labeler.yml
           sync-labels: true
 
+      - name: Create Draft Label
+        run: gh label create $LABEL_NAME --color $LABEL_COLOR
+
       - name: Add or Remove Draft Label
-        run: |
-         gh label create $LABELS --color EDEDED
-         gh pr edit $NUMBER $OPTION $LABELS
+        run: gh pr edit $NUMBER $OPTION $LABEL_NAME
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GH_REPO: ${{ github.repository }}
           NUMBER: ${{ github.event.number }}
           OPTION: ${{ github.event.pull_request.draft == true && '--add-label' || '--remove-label' }}
-          LABELS: draft
