:bug: draftラベルが存在する場合にエラーなるのでエラー時に後続の処理を継続するように

--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -26,6 +26,7 @@ jobs:
           sync-labels: true
 
       - name: Create Draft Label
+        continue-on-error: true
         run: gh label create $LABEL_NAME --color $LABEL_COLOR
 
       - name: Add or Remove Draft Label
