Revert ":construction: draftラベルの判定をPRのタイトルに拡張してみる"
This reverts commit 2fe90ed0cd991004108e60d012ae73b297023f45.

--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -33,5 +33,4 @@ jobs:
         run: gh pr edit $NUMBER $OPTION $LABEL_NAME
         env:
           NUMBER: ${{ github.event.number }}
-          # OPTION: ${{ github.event.pull_request.draft == true && '--add-label' || '--remove-label' }}
-          OPTION: ${{ (contains(toLowerCase(github.event.pull_request.title), 'wip') || contains(toLowerCase(github.event.pull_request.title), 'work in progress') || contains(github.event.pull_request.title, '🚧')) && '--add-label' || '--remove-label' }}
+          OPTION: ${{ github.event.pull_request.draft == true && '--add-label' || '--remove-label' }}
