--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -11,6 +11,8 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
+      # エンタープライズのプライベートリポジトリの場合は以下も必要ぽい
+      # repository-projects: read
 
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
