--- a/.github/workflows/auto-create-release-pr.yml
+++ b/.github/workflows/auto-create-release-pr.yml
@@ -16,7 +16,7 @@ jobs:
         id: vars
         run: |
           git fetch origin
-          DIFF_FILES=$(git diff --name-only HEAD^ HEAD)
+          DIFF_FILES=$(git diff --name-only origin/main HEAD)
           if [ -z "$DIFF_FILES" ]; then
             echo "No changes detected."
             echo "::set-output name=is_changed::false"
