--- a/.github/workflows/auto-create-release-pr.yml
+++ b/.github/workflows/auto-create-release-pr.yml
@@ -19,10 +19,10 @@ jobs:
           DIFF_FILES=$(git diff --name-only origin/main HEAD)
           if [ -z "$DIFF_FILES" ]; then
             echo "No changes detected."
-            echo "::set-output name=is_changed::false"
+            echo "is_changed=false" >> $GITHUB_OUTPUT
           else
             echo "Changes detected."
-            echo "::set-output name=is_changed::true"
+            echo "is_changed=true" >> $GITHUB_OUTPUT
           fi
 
   auto-create-release-pr:
@@ -39,7 +39,7 @@ jobs:
 
       - name: Set Up Branch Name
         id: vars
-        run: echo "::set-output name=branch_name::${GITHUB_REF#refs/heads/}"
+        run: echo "branch_name=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
 
       - name: Install git-pr-release
         run: gem install --no-document git-pr-release
