:construction_worker: needを追加

--- a/.github/workflows/auto-create-release-pr.yml
+++ b/.github/workflows/auto-create-release-pr.yml
@@ -26,7 +26,7 @@ jobs:
           fi
 
   auto-create-release-pr:
-#    needs: check-file-changed
+    needs: check-file-changed
 #    if: ${{ needs.check-file-changed.outputs.is_changed == 'true' }}
     if: steps.vars.outputs.is_changed == 'true'
     runs-on: ubuntu-latest
