:bug: auto-create-release-prが常にスキップされる

--- a/.github/workflows/auto-create-release-pr.yml
+++ b/.github/workflows/auto-create-release-pr.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Check File Changed
-        id: vars
+        id: check_diff
         run: |
           git fetch origin
           DIFF_FILES=$(git diff --name-only origin/main HEAD)
@@ -24,7 +24,9 @@ jobs:
             echo "Changes detected."
             echo "is_changed=true" >> $GITHUB_OUTPUT
           fi
-          cat $GITHUB_OUTPUT  # デバッグ用: GITHUB_OUTPUTの内容を出力
+
+    outputs:
+      is_changed: ${{ steps.check_diff.outputs.is_changed }}
 
   auto-create-release-pr:
     needs: check-file-changed
@@ -39,7 +41,7 @@ jobs:
           ruby-version: 3.1
 
       - name: Set Up Branch Name
-        id: vars
+        id: branch_name
         run: echo "branch_name=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
 
       - name: Install git-pr-release
@@ -50,7 +52,7 @@ jobs:
         env:
           GIT_PR_RELEASE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GIT_PR_RELEASE_BRANCH_PRODUCTION: main
-          GIT_PR_RELEASE_BRANCH_STAGING: ${{ steps.vars.outputs.branch_name }}
+          GIT_PR_RELEASE_BRANCH_STAGING: ${{ steps.branch_name.outputs.branch_name }}
           GIT_PR_RELEASE_LABELS: release
           GIT_PR_RELEASE_TEMPLATE: .github/configs/release_pull_request_template.erb
           TZ: Asia/Tokyo
