:construction_worker: jobを1つにまとめる

--- a/.github/workflows/auto-create-release-pr.yml
+++ b/.github/workflows/auto-create-release-pr.yml
@@ -6,14 +6,40 @@ on:
       - release/**
 
 jobs:
-  check-file-changed:
+#  check-file-changed:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v4
+#
+#      - name: Check File Changed
+#        id: check_diff
+#        run: |
+#          git fetch origin
+#          DIFF_FILES=$(git diff --name-only origin/main HEAD)
+#          if [ -z "$DIFF_FILES" ]; then
+#            echo "No changes detected."
+#            echo "is_changed=false" >> $GITHUB_OUTPUT
+#          else
+#            echo "Changes detected."
+#            echo "is_changed=true" >> $GITHUB_OUTPUT
+#          fi
+#
+#    outputs:
+#      is_changed: ${{ steps.check_diff.outputs.is_changed }}
+
+  auto-create-release-pr:
+#    needs: check-file-changed
+#    if: ${{ needs.check-file-changed.outputs.is_changed == 'true' }}
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Check File Changed
-        id: check_diff
+        id: check_file_changed
         run: |
           git fetch origin
           DIFF_FILES=$(git diff --name-only origin/main HEAD)
@@ -25,37 +51,25 @@ jobs:
             echo "is_changed=true" >> $GITHUB_OUTPUT
           fi
 
-    outputs:
-      is_changed: ${{ steps.check_diff.outputs.is_changed }}
-
-  auto-create-release-pr:
-    needs: check-file-changed
-    if: ${{ needs.check-file-changed.outputs.is_changed == 'true' }}
-    runs-on: ubuntu-latest
-    permissions:
-      pull-requests: write
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
       - name: Set Up Ruby
         uses: actions/setup-ruby@v1
         with:
           ruby-version: 3.1
 
       - name: Set Up Branch Name
-        id: branch_name
+        id: set_up_branch_name
         run: echo "branch_name=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
 
       - name: Install git-pr-release
         run: gem install --no-document git-pr-release
 
       - name: Run git-pr-release
+        if: steps.check_file_changed.outputs.is_changed == 'true'
         run: git-pr-release
         env:
           GIT_PR_RELEASE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GIT_PR_RELEASE_BRANCH_PRODUCTION: main
-          GIT_PR_RELEASE_BRANCH_STAGING: ${{ steps.branch_name.outputs.branch_name }}
+          GIT_PR_RELEASE_BRANCH_STAGING: ${{ steps.set_up_branch_name.outputs.branch_name }}
           GIT_PR_RELEASE_LABELS: release
           GIT_PR_RELEASE_TEMPLATE: .github/configs/release_pull_request_template.erb
           TZ: Asia/Tokyo
