--- a/.github/workflows/auto-create-release-pr.yml
+++ b/.github/workflows/auto-create-release-pr.yml
@@ -30,15 +30,18 @@ jobs:
           fi
 
       - name: Set Up Ruby
+        if: steps.check_file_changed.outputs.is_changed == 'true'
         uses: actions/setup-ruby@v1
         with:
           ruby-version: 3.1
 
       - name: Set Up Branch Name
+        if: steps.check_file_changed.outputs.is_changed == 'true'
         id: set_up_branch_name
         run: echo "branch_name=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
 
       - name: Install git-pr-release
+        if: steps.check_file_changed.outputs.is_changed == 'true'
         run: gem install --no-document git-pr-release
 
       - name: Run git-pr-release
