--- a/.github/workflows/auto-pr-release.yml
+++ b/.github/workflows/auto-pr-release.yml
@@ -38,7 +38,10 @@ jobs:
       - name: Set Up Branch Name
         if: steps.check_file_changed.outputs.is_changed == 'true'
         id: set_up_branch_name
-        run: echo "branch_name=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
+#        run: echo "branch_name=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
+        run: |
+          echo "branch_name=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
+          echo "BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
 
       - name: Install git-pr-release
         if: steps.check_file_changed.outputs.is_changed == 'true'
