--- a/.github/workflows/auto-pr-release.yml
+++ b/.github/workflows/auto-pr-release.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Check File Changed
-        id: check_file_changed
+        id: check-file-changed
         run: |
           git fetch origin
           DIFF_FILES=$(git diff --name-only origin/main HEAD)
@@ -30,30 +30,32 @@ jobs:
           fi
 
       - name: Set Up Ruby
-        if: steps.check_file_changed.outputs.is_changed == 'true'
+        if: steps.check-file-changed.outputs.is_changed == 'true'
         uses: actions/setup-ruby@v1
         with:
           ruby-version: 3.1
 
       - name: Set Up Branch Name
-        if: steps.check_file_changed.outputs.is_changed == 'true'
-        id: set_up_branch_name
+        if: steps.check-file-changed.outputs.is_changed == 'true'
+#        id: set_up_branch_name
 #        run: echo "branch_name=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
-        run: |
-          echo "branch_name=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
-          echo "BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
+#        run: |
+#          echo "branch_name=${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
+#          echo "BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
+        run: echo "BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
 
       - name: Install git-pr-release
-        if: steps.check_file_changed.outputs.is_changed == 'true'
+        if: steps.check-file-changed.outputs.is_changed == 'true'
         run: gem install --no-document git-pr-release
 
       - name: Run git-pr-release
-        if: steps.check_file_changed.outputs.is_changed == 'true'
+        if: steps.check-file-changed.outputs.is_changed == 'true'
         run: git-pr-release
         env:
           GIT_PR_RELEASE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GIT_PR_RELEASE_BRANCH_PRODUCTION: main
-          GIT_PR_RELEASE_BRANCH_STAGING: ${{ steps.set_up_branch_name.outputs.branch_name }}
+#          GIT_PR_RELEASE_BRANCH_STAGING: ${{ steps.set_up_branch_name.outputs.branch_name }}
+          GIT_PR_RELEASE_BRANCH_STAGING: ${{ env.BRANCH_NAME }}
           GIT_PR_RELEASE_LABELS: release
           GIT_PR_RELEASE_TEMPLATE: .github/configs/pr-release-template.erb
           TZ: Asia/Tokyo
