:wastebasket: auto pint 試行

--- a/.github/workflows/auto-pint.yml
+++ b/.github/workflows/auto-pint.yml
@@ -6,7 +6,7 @@ on:
       - '**.php'
       - '!**.blade.php'
     branches-ignore:
-#      - main
+      - main
       - staging
       - develop
   workflow_dispatch:
