--- a/.github/workflows/auto-commit.yml
+++ b/.github/workflows/auto-commit.yml
@@ -24,3 +24,4 @@ jobs:
         with:
           commit_message: ☕ Auto Commit
           commit_options: '--allow-empty'
+          skip_dirty_check: true
