--- a/.github/workflows/auto-commit.yml
+++ b/.github/workflows/auto-commit.yml
@@ -2,8 +2,7 @@ name: Auto Commit
 
 on:
   schedule:
-#    - cron: '0 8 * * *'
-    - cron: '10,20,30,40,50,0 * * * *'
+    - cron: '0 8 * * *'
   workflow_dispatch:
 
 jobs:
