--- a/.github/workflows/auto-commit.yml
+++ b/.github/workflows/auto-commit.yml
@@ -1,8 +1,8 @@
 name: Auto Commit
 
 on:
-  schedule:
-    - cron: '0 8 * * *'
+#  schedule:
+#    - cron: '0 8 * * *'
   workflow_dispatch:
 
 jobs:
