--- a/.github/workflows/auto-pr-release.yml
+++ b/.github/workflows/auto-pr-release.yml
@@ -14,6 +14,7 @@ jobs:
       contents: read
       pull-requests: write
 
+    # TODO: main向きのリリースPR作成にしか対応していないため修正する
     steps:
       - name: Checkout
         uses: actions/checkout@v4
