:wastebasket: playbookワークフローの動作確認用commit

--- a/.github/workflows/auto-pint.yml
+++ b/.github/workflows/auto-pint.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Call Playbook
         if: success()
-        uses: ./.github/workflows/playbook
+        uses: ./.github/workflows/playbook.yml
         with:
           message: |
             # ${{ github.job }} が失敗しました
