--- a/.github/workflows/auto-pint.yml
+++ b/.github/workflows/auto-pint.yml
@@ -37,64 +37,21 @@ jobs:
         with:
           commit_message: 🎨 Auto Pint
 
-#      - name: Call Playbook
-#        if: success()
-#        uses: ./.github/actions/playbook
-#        with:
-#          message: |
-#            # ${{ github.job }} が失敗しました
-#
-#            ## 影響
-#            - 何が影響を受けるか
-#
-#            ## 調査方法
-#            - Jobの落ちてるステップのエラーログを確認してください
-#
-#            ## 修正方法
-#            - どのように対応するか
-#
-#            ## 修正後の確認方法
-#            - 修正後にどのように確認するか
+      - name: Call Playbook
+        if: success()
+        uses: ./.github/actions/playbook
+        with:
+          message: |
+            # ${{ github.job }} が失敗しました
 
-    outputs:
-      commit_done: ${{ steps.commit.outcome }}
+            ## 影響
+            - 何が影響を受けるか
 
-  call-playbook-2:
-    needs: auto-pint
-    if: needs.auto-pint.outputs.commit_done == 'success'
-    uses: ./.github/workflows/playbook.yml
-    with:
-      message: |
-        # ${{ github.job }} が失敗しました
+            ## 調査方法
+            - Jobの落ちてるステップのエラーログを確認してください
 
-        ## 影響
-        - 何が影響を受けるか
+            ## 修正方法
+            - どのように対応するか
 
-        ## 調査方法
-        - Jobの落ちてるステップのエラーログを確認してください
-
-        ## 修正方法
-        - どのように対応するか
-
-        ## 修正後の確認方法
-        - 修正後にどのように確認するか
-
-  call-playbook-3:
-    needs: auto-pint
-    if: needs.auto-pint.outputs.commit_done != 'success'
-    uses: ./.github/workflows/playbook.yml
-    with:
-      message: |
-        # ${{ github.job }} が失敗しました
-
-        ## 影響
-        - 何が影響を受けるか
-
-        ## 調査方法
-        - Jobの落ちてるステップのエラーログを確認してください
-
-        ## 修正方法
-        - どのように対応するか
-
-        ## 修正後の確認方法
-        - 修正後にどのように確認するか
+            ## 修正後の確認方法
+            - 修正後にどのように確認するか
