--- a/.github/workflows/auto-pint.yml
+++ b/.github/workflows/auto-pint.yml
@@ -41,17 +41,18 @@ jobs:
         if: success()
         uses: ./.github/actions/playbook
         with:
-          message: |
-            # ${{ github.job }} が失敗しました
-
-            ## 影響
-            - 何が影響を受けるか
-
-            ## 調査方法
-            - Jobの落ちてるステップのエラーログを確認してください
-
-            ## 修正方法
-            - どのように対応するか
-
-            ## 修正後の確認方法
-            - 修正後にどのように確認するか
+          message: fugafuga
+#          message: |
+#            # ${{ github.job }} が失敗しました
+#
+#            ## 影響
+#            - 何が影響を受けるか
+#
+#            ## 調査方法
+#            - Jobの落ちてるステップのエラーログを確認してください
+#
+#            ## 修正方法
+#            - どのように対応するか
+#
+#            ## 修正後の確認方法
+#            - 修正後にどのように確認するか
