--- a/.github/workflows/auto-pint.yml
+++ b/.github/workflows/auto-pint.yml
@@ -28,6 +28,7 @@ jobs:
         uses: aglipanci/laravel-pint-action@2.4
         with:
           verboseMode: true
+          testMode: true # todo 消す
           # ./vendor/bin/pint --versionを実行してcomposer.lockのpintのバージョンに合わせる
           # pintVersion: 1.14.0
 
@@ -38,7 +39,7 @@ jobs:
           commit_message: 🎨 Auto Pint
 
       - name: Call Playbook
-        if: success()
+        if: failure()
         uses: ./.github/actions/playbook
         with:
           message: fugafuga
