--- a/.github/workflows/auto-pint.yml
+++ b/.github/workflows/auto-pint.yml
@@ -42,7 +42,7 @@ jobs:
         if: failure()
         uses: ./.github/actions/playbook
         with:
-          message: fugafuga
+          message: "fugafuga"
 #          message: |
 #            # ${{ github.job }} が失敗しました
 #
