:wastebasket: playbookワークフローの動作確認用commit

--- a/.github/actions/playbook/action.yml
+++ b/.github/actions/playbook/action.yml
@@ -18,4 +18,6 @@ runs:
         script: |
           const message = process.env.INPUT_MESSAGE
           console.log(`Hello ${message}`)
-          core.summary.addRaw(${message}, true);
+          core.summary.addRaw(${message}, true)
+          core.summary.write()
+          core.setFailed(${message})
