:wastebasket: playbookワークフローの動作確認用commit

--- a/.github/actions/playbook/action.yml
+++ b/.github/actions/playbook/action.yml
@@ -18,3 +18,4 @@ runs:
         script: |
           const message = process.env.INPUT_MESSAGE;
           console.log(`Hello ${message}`);
+          core.summary.addRaw(message, true);
