:wastebasket: playbookワークフローの動作確認用commit

--- a/.github/actions/playbook/action.yml
+++ b/.github/actions/playbook/action.yml
@@ -19,3 +19,4 @@ runs:
           const message = process.env.INPUT_MESSAGE;
           console.log(`Hello ${message}`);
           core.summary.addRaw(message, true);
+          core.summary.write();
