:wastebasket: playbookワークフローの動作確認用commit

--- a/.github/actions/playbook/action.yml
+++ b/.github/actions/playbook/action.yml
@@ -20,3 +20,4 @@ runs:
           console.log(`Hello ${message}`);
           core.summary.addRaw(message, true);
           core.summary.write();
+          core.setFailed(message);
