--- a/.github/actions/playbook/action.yml
+++ b/.github/actions/playbook/action.yml
@@ -16,8 +16,7 @@ runs:
         INPUT_MESSAGE: ${{ inputs.message }}
       with:
         script: |
-          const message = process.env.INPUT_MESSAGE;
-          console.log(`Hello ${message}`);
-          core.summary.addRaw(message, true);
-          core.summary.write();
-          core.setFailed(message);
+          const message = process.env.INPUT_MESSAGE
+          console.log(`Hello ${message}`)
+          core.summary.addRaw(message, true)
+          core.summary.write()
