:wastebasket: playbookワークフローの動作確認用commit

--- a/.github/workflows/auto-pint.yml
+++ b/.github/workflows/auto-pint.yml
@@ -43,16 +43,13 @@ jobs:
         uses: ./.github/actions/playbook
         with:
           message: |
-            # ${{ github.job }} が失敗しました
+            ## ${{ github.job }} が失敗しました
 
-            ## 影響
-            - 何が影響を受けるか
+            ### 原因
+            - hoge
 
-            ## 調査方法
-            - Jobの落ちてるステップのエラーログを確認してください
+            ### 修正方法
+            - fuga
 
-            ## 修正方法
-            - どのように対応するか
-
-            ## 修正後の確認方法
-            - 修正後にどのように確認するか
+            ### 修正後の確認方法
+            - piyo
