--- a/.github/actions/playbook/action.yml
+++ b/.github/actions/playbook/action.yml
@@ -1,22 +1,20 @@
 name: Playbook
 
-description: CIのJOBが落ちた時にどのように対応するべきかを書く
+description: CIのJOBが落ちたときにどのように対応するべきかをSummaryに出力します
 
 inputs:
   message:
-    description: "How to fix?"
+    description: How to fix?
     required: true
 
 runs:
   using: composite
   steps:
-    - name: How to Fix?
-      uses: actions/github-script@v7
+    - uses: actions/github-script@v7
       env:
         INPUT_MESSAGE: ${{ inputs.message }}
       with:
         script: |
           const message = process.env.INPUT_MESSAGE
-          console.log(`Hello ${message}`)
           core.summary.addRaw(message, true)
           core.summary.write()
