--- a/.github/workflows/auto-pint.yml
+++ b/.github/workflows/auto-pint.yml
@@ -38,7 +38,7 @@ jobs:
           commit_message: 🎨 Auto Pint
 
       - name: Call Playbook
-        if: success()
+        if: failure()
         uses: ./.github/actions/playbook
         with:
           message: |
